# knowrob_refills

./: CMakeLists.txt  README.md  build.gradle  package.xml  setup.py
launch/: knowrob_stocktaking.launch  knowrob_stocktaking_test.launch  map.launch
owl/: ERP-master-data.owl  README.md  dm-market-iai.owl  dm-market.owl  iai-shop.owl  product-taxonomy.owl  shop-test.owl  shop.owl
scripts/: export_neem_as_urdf.py  fill_all_facings.py  import_catalog.py  start_knowrob_with_beliefstate.py  update_catalog.sh
src/: __init__.pl  refills.pl  refills.plt  shop.pl  shop.plt  shop_reasoner.pl
src/knowrob_refills/: knowrob_wrapper.py
