<package>
  <name>knowrob_stocktaking</name>
  <version>0.1.0</version>
  <description>knowrob_stocktaking

     Ontologies, definitions and computables for the integration of the
     KnowRob knowledge base and the CRAM plan-based executive.</description>
   <maintainer email="danielb@cs.uni-bremen.de">Daniel Beler</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/knowrob_stocktaking</url>

  <author email="danielb@cs.uni-bremen.de">Daniel Beler</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>knowrob</build_depend>

  <run_depend>knowrob</run_depend>

</package>

